--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
   </head>
 
   
@@ -24,7 +25,73 @@
       <a href="aboutme.html" class="item">ABOUT ME</a>   <!-- Bio/Contact Info-->
     </div>
 
+    <div class="container-fluid" id="about-me">
+      <div class="row align-items-center content">
+          <div class="col-lg-6">
+             <img class="img-fluid rounded-circle px-5" src="images/profile.jpg" alt="profile picture">
+          </div>
+          <div class="col-lg-6">
+            <div class="text-center px-4">
+              <h1 class="mb-4">About Me</h1>
+              <h5>Hello, my name is Aila! </h5>
+                <p>I am an aspiring UX Designer based in the Los Angeles Area. My formal education background
+                is in Information Technology with an emphasis in Psychology and Big Data. I am driven 
+                towards taking part in innovative projects that utilizes data from human behavior to amplify
+                technology for the future.
+               </p>
+            </div>
+          </div>
+      </div>
 
+      <div class="row align-items-center">
+        <div class="col text-center">
+          <h1 class="text-center mb-4">Skills & Interests</h1>
+          <i class="mb-4">Here are some skills I am currently working on:</i>
+          <p class="mt-3"><b>Technical Skills: </b>HTML, JavaScript, CSS, Bootstrap, Python, SQL</p>
+          <p><b>Tools: </b>VSCode, Git, Adobe Illustrator</p>
+          <p><b>Other Interests: </b>Dance, Aerial Hammock</p>
+        </div>
+      </div>
+
+
+      <div class="row align-items-center">
+        <div class="col">
+          <h1 class="text-center">Education</h1>
+          <div class="row mt-5 mb-4">
+            <div class="col text-center">
+              <p><b>Arizona State University</b></p>
+              <p>MS in Information Technology</p>
+            </div>
+            <div class="col text-center">
+              Graduation Date: 2020
+            </div>
+          </div>
+          <div class="row mb-4">
+            <div class="col text-center">
+              <p><b>Arizona State University</b></p>
+              <p>BS in Information Technology</p>
+            </div>
+            <div class="col text-center">
+              <p>Graduation Date: 2019</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row align-items-center">
+        <div class="col text-center">
+          <h1 class="text-center">Contact</h1>
+          <p>
+            <b>Email: </b>ailacataquiz@gmail.com
+          </p>
+          <p>
+            <b>Phone: </b>1.310.951.8446
+          </p>
+        </div>
+      </div>
+
+
+    </div>
 
     <script type="text/javascript" src="java.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
