Finish About Me

--- a/home.html
+++ b/home.html
@@ -21,8 +21,8 @@
       <a href="home.html"><img src="aauc.png" alt="AAUC" id="logo"></a> <!--Logo-->
       </div>
       
-      <a href="projects.html" class="item">PROJECTS</a>   <!-- Projects Index -->
-      <a href="aboutme.html" class="item">ABOUT ME</a>   <!-- Bio/Contact Info-->
+      <!-- <a href="projects.html" class="item">PROJECTS</a>    Projects Index -->
+      <!--  <a href="aboutme.html" class="item">ABOUT ME</a>   Bio/Contact Info-->
     </div>
 
     <div class="container-fluid" id="about-me">
@@ -43,20 +43,24 @@
           </div>
       </div>
 
-      <div class="row align-items-center">
+
+      <div class="row">
         <div class="col text-center">
-          <h1 class="text-center mb-4">Skills & Interests</h1>
-          <i class="mb-4">Here are some skills I am currently working on:</i>
-          <p class="mt-3"><b>Technical Skills: </b>HTML, JavaScript, CSS, Bootstrap, Python, SQL</p>
-          <p><b>Tools: </b>VSCode, Git, Adobe Illustrator</p>
-          <p><b>Other Interests: </b>Dance, Aerial Hammock</p>
+          <h1 class="text-center">Skills & Interests</h1>
+        </div>
+        <div class="col text-center">
+          <h1 class="text-center">Education</h1>
         </div>
       </div>
 
-
       <div class="row align-items-center">
+        <div class="col text-center">
+          <i class="mb-4">Here are some skills I am currently working on:</i>
+          <p class="mt-5"><b>Technical Skills: </b>HTML, JavaScript, CSS, Bootstrap, Python, SQL</p>
+          <p><b>Tools: </b>VSCode, Git, Adobe Illustrator</p>
+          <p><b>Other Interests: </b>Dance, Aerial Hammock</p>
+        </div>
         <div class="col">
-          <h1 class="text-center">Education</h1>
           <div class="row mt-5 mb-4">
             <div class="col text-center">
               <p><b>Arizona State University</b></p>
@@ -80,7 +84,7 @@
 
       <div class="row align-items-center">
         <div class="col text-center">
-          <h1 class="text-center">Contact</h1>
+          <h1 class="text-center mb-4">Contact</h1>
           <p>
             <b>Email: </b>ailacataquiz@gmail.com
           </p>
