--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- NAVIGATION BAR WITH LOGO -->
     <div class=topnav>
       <div class=logo>
-      <a href="home.html"><img src="aauc.png" alt="AAUC" id="logo"></a> <!--Logo-->
+      <a href="https://ailacataquiz.github.io/"><img src="aauc.png" alt="AAUC" id="logo"></a> <!--Logo-->
       </div>
       
       <!-- <a href="projects.html" class="item">PROJECTS</a>    Projects Index -->
