Add LinkedIn link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       
       <!-- <a href="projects.html" class="item">PROJECTS</a>    Projects Index -->
-      <!--  <a href="aboutme.html" class="item">ABOUT ME</a>   Bio/Contact Info-->
+      <a href="www.linkedin.com/in/aila-anne-cataquiz" class="item">LINKEDIN</a>  <!-- Bio/Contact Info-->
     </div>
 
     <div class="container-fluid" id="about-me">
