Fix GitHub link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="https://ailacataquiz.github.io/"><img src="aauc.png" alt="AAUC" id="logo"></a> <!--Logo-->
       </div>
       
-      <a href="https://github.com/ailacataquiz" class="item">GitHub</a>    <!-- Projects Index -->
+      <a href="https://github.com/ailacataquiz" class="item">GITHUB</a>    <!-- Projects Index -->
       <a href="www.linkedin.com/in/aila-anne-cataquiz" class="item">LINKEDIN</a>  <!-- Bio/Contact Info-->
     </div>
 
