Fix LinkedIn link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       
       <a href="https://github.com/ailacataquiz" class="item">GITHUB</a>    <!-- Projects Index -->
-      <a href="www.linkedin.com/in/aila-anne-cataquiz" class="item">LINKEDIN</a>  <!-- Bio/Contact Info-->
+      <a href="https://www.linkedin.com/in/aila-anne-cataquiz" class="item">LINKEDIN</a>  <!-- Bio/Contact Info-->
     </div>
 
     <div class="container-fluid" id="about-me">
